# GE-VIC

./: .env.example  .env.local.example  .gitignore  README.md  RELEASE_NOTES_V1.0.0.md  RELEASE_NOTES_V1.1.0.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  final_e2e.py  pyproject.toml  quick_e2e.py  test_demo.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_seed_algorithm.py  003_seed_mock_algorithm.py  004_seed_multimodal_algorithm.py  005_batch_inspection.py  006_tus_upload_sessions.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py
backend/app/api/: __init__.py  admin_algorithms.py  algorithms.py  files.py  health.py  inspect.py  records.py  settings.py  tus.py
backend/app/engines/: __init__.py  base.py  cloud.py  factory.py  mock.py  multimodal_llm.py
backend/app/middleware/: metrics_middleware.py
backend/app/models/: __init__.py  algorithm.py  audit_log.py  base.py  inspection.py  upload_session.py
backend/app/schemas/: __init__.py  algorithm.py  common.py  inspection.py
backend/app/services/: algorithm_registry.py  audit.py  enrichment.py  llm_client.py  metrics.py  runtime_config.py  storage.py
backend/app/tasks/: __init__.py  celery_app.py  (+1 more)
backend/tests/: conftest.py  test_algorithm_registry.py  test_api_algorithms.py  test_api_health.py  test_api_inspect.py  test_api_records.py  test_api_tus.py  test_audit.py  test_config.py  test_database.py  test_engines.py  test_enrichment.py  test_inspector_id.py  test_llm_client.py  test_storage.py  test_task_inspection.py
(+52 files in other folders)
